# clibs

./: .gitignore  README.md
cmp/: CMakeLists.txt  cmp.h  main.cpp
compress/: CMakeLists.txt  compress.h  main.cpp
dbits/: CMakeLists.txt  dbits.h  main.cpp
det/: CMakeLists.txt  det.h  main.cpp
ftypes/: CMakeLists.txt  ftypes.h
geom/: CMakeLists.txt  coords.h  geom.h  geometry.h  line.h  line_mono.h  linestring.h  main.cpp  mono.h  point.h  ring.h  util.h  wkt.h
mbr/: CMakeLists.txt  main.c  main.cpp  mbr.h  mbr_dpm.h  test.c  test.h  test_mbr.c  util.h
mem/: CMakeLists.txt  main.c  mem.c  mem.h
mutil/: CMakeLists.txt  main.cpp  mutil.h
object/: CMakeLists.txt  main.cpp  object.h
orient/: CMakeLists.txt  main.cpp  orient.h
orient/demo/: CMakeLists.txt  main.cpp  orient.js  package-lock.json  package.json
product/: CMakeLists.txt  main.cpp  product.h
pt/: CMakeLists.txt  main.cpp  pt.h
random/: CMakeLists.txt  main.cpp  rand.h
rbsegs/: CMakeLists.txt  Event.h  brute.h  brute_force.h  event.h  intersects.h  main.cpp  prep.h  rbinter.h  rbsegs.h  seg.h  test.cpp  test_cases.h  util.h
rbsegs/bench/: CMakeLists.txt  main.cpp
rtree/: CMakeLists.txt  README.md  clear.h  core.h  debug.txt  item.h  main-dd.cpp  main.cpp  node.h  rtree.h  util.h
scale/: CMakeLists.txt  main.cpp  scale.h
sllist/: CMakeLists.txt  main.c  sllist.h
subtract/: CMakeLists.txt  main.cpp  subtract.h
sum/: CMakeLists.txt  main.cpp  sum.h
test_overlap/: CMakeLists.txt  main.cpp  test_overlap.h
twiddle/: CMakeLists.txt  tests.cpp  twiddle.h
twoproduct/: CMakeLists.txt  main.cpp  two_product.h
twosum/: CMakeLists.txt  main.cpp  two_sum.h  twosum.h
validate_seq/: CMakeLists.txt  main.cpp  validate_seq.h
vector/: CMakeLists.txt  main.c  vector.c  vector.h
xmbr/: CMakeLists.txt  mbr.h  test.h  test_mbr.c  util.h
